feat: agent-grade surface — annotations, structured output, remediation, lazy mode, dry-run preview (v1.2.0)